# recreation-checker

./: .gitignore  README.md  camping.py  pyproject.toml  requirements.txt  setup.py
campsite-lists/: california-lookouts.txt  fav-lookouts.txt  old-oregon-lookouts.txt  oregon-lookouts-favs.txt  oregon-lookouts.txt  yosemite.txt
recreation/: api_camp.py  api_client.py  availability_list.py  campground.py  core.py  models.py  new_api.py  oldapi_campground.py  oldapi_permit.py  permit.py
recreation/api/: camp.py  client.py  extra.py  permit.py
recreation/newapi/: api_camp.py  api_client.py  api_permit.py  availability_list.py  core.py  models.py
recreation/rgapi/: camp.py  client.py  extra.py  permit.py
scripts/: camping.py  new_api_camping.py  notifier.py  oldapi_camping.py
tests/: test_availability_list.py  test_camp.py  test_campground.py  test_client.py  test_core.py  test_models.py  test_new_api_availability_list.py  test_new_api_camp.py  test_new_api_client.py  test_new_api_models.py  test_new_api_permit.py  test_oldapi_campground.py  test_oldapi_core.py  test_permit.py
